refactor: standard BOM 수정